network-policy/mariadb-bookshelf.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: home-library-bookshelf-network-policy
  namespace: mariadb-galera
spec:
  podSelector: 
    matchLabels:
      app: mariadb-galera
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - protocol: TCP
        port: 3306
    - from:
      - namespaceSelector:
          matchLabels:
            project: home-library
        podSelector:
          matchLabels:
            app: bookshelf
